# ingatlan

./: LICENSE  README.md  pyproject.toml
ingatlan/: main.py
tests/: test_ingatlan.py
