[tool.poetry]
name = "ingatlan"
version = "0.1.0"
description = "Ingatlan.com crawler"
authors = ["mobal <info@netcode.hu>"]

[tool.poetry.dependencies]
python = "^3.9"
pylint = "^2.6.0"
requests = "^2.25.1"
beautifulsoup4 = "^4.9.3"
chevron = "^0.14.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
